--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,9 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-	--color-background: var(--background);
+	--color-background: rgba(52, 48, 44);
+	--color-text: rgba(235, 192, 109);
 	--color-foreground: var(--foreground);
-	--font-sans: var(--font-inconsolata);
-	--font-mono: var(--font-inconsolata);
 	--color-sidebar-ring: var(--sidebar-ring);
 	--color-sidebar-border: var(--sidebar-border);
 	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
